#3 GlobalExceptionHandler and inventoryUpdate Code fixes